force-app/main/default/objects/Sf_Org_Deployment__c/Sf_Org_Deployment__c.object-meta.xml
<CustomObject>
    <description>Tracks a confirmation-gated deployment of selected GitHub metadata to an OAuth-authorized Salesforce org.</description>
    <label>Salesforce Org Deployment</label>
    <nameField>
        <displayFormat>SFD-{000000}</displayFormat>
        <label>Deployment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Org Deployments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>