force-app/main/default/objects/Sf_Org_Deployment__c/fields/Component_Paths__c.field-meta.xml
<CustomField>
    <fullName>Component_Paths__c</fullName>
    <description>JSON array of repository-relative metadata paths approved for deployment.</description>
    <label>Component Paths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>