force-app/main/default/objects/Sf_Org_Deployment__c/fields/Connection_Key__c.field-meta.xml
<CustomField>
    <fullName>Connection_Key__c</fullName>
    <description>OAuth connection key selected by the agent. Tokens are never copied to this record.</description>
    <label>Connection Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>