force-app/main/default/objects/Sf_Org_Deployment__c/fields/Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id__c</fullName>
    <label>Deployment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>