force-app/main/default/objects/Sf_Org_Deployment__c/fields/Production_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Production_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True only when the user explicitly confirmed a possible production deployment.</description>
    <label>Production Confirmed</label>
    <type>Checkbox</type>
</CustomField>