force-app/main/default/objects/Sf_Org_Deployment__c/fields/Session_Claimed_At__c.field-meta.xml
<CustomField>
    <fullName>Session_Claimed_At__c</fullName>
    <label>Session Claimed At</label>
    <type>DateTime</type>
</CustomField>