force-app/main/default/objects/Sf_Org_Deployment__c/fields/Validation_Id__c.field-meta.xml
<CustomField>
    <fullName>Validation_Id__c</fullName>
    <label>Validation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>