force-app/main/default/objects/Sf_Org_Deployment__c/fields/Workflow_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Run_Id__c</fullName>
    <label>Workflow Run Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>